<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".PanekProjectActivity"
    android:weightSum="1">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/panekfinal_appName"
        android:id="@+id/Title"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/panekfinal_scanNewItem"
        android:id="@+id/scanItemButton"
        android:width="300dp"
        android:layout_marginBottom="58dp"
        android:layout_above="@+id/viewCartButton"
        android:layout_alignLeft="@+id/viewCartButton"
        android:layout_alignStart="@+id/viewCartButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/panekfinal_viewCart"
        android:id="@+id/viewCartButton"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:width="300dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/panekfinal_checkout"
        android:id="@+id/checkoutButton"
        android:layout_marginTop="57dp"
        android:width="300dp"
        android:layout_below="@+id/viewCartButton"
        android:layout_alignLeft="@+id/viewCartButton"
        android:layout_alignStart="@+id/viewCartButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/panekfinal_price"
        android:gravity="end"
        android:id="@+id/priceLabel"
        android:layout_below="@+id/Title"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:width="100dp"
        android:paddingTop="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/panekfinal_cartItems"
        android:id="@+id/numItems"
        android:layout_above="@+id/priceLabel"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:singleLine="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/panekfinal_cartItemsLabel"
        android:id="@+id/itemsLabel"
        android:gravity="end"
        android:layout_above="@+id/priceLabel"
        android:layout_toLeftOf="@+id/numItems"
        android:layout_toStartOf="@+id/numItems"
        android:width="100dp"
        android:paddingRight="5dp" />


</RelativeLayout>
